<resources>
    <string name="app_name">DnsChangerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dns_changer">Dns Changer</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="your_internet_is_not_private">Your Internet is not private.</string>
    <string name="your_internet_is_private">Your Internet is private.</string>
    <string name="view"><u>View</u></string>
    <string name="about_us">About us</string>
    <string name="app_version">App version</string>
    <string name="place_holder">---</string>
    <string name="privacy_information">Privacy information</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="connect">Connect</string>
    <string name="google_dns">Google DNS</string>

    <string name="privacy_policy"><![CDATA[
    Privacy Policy
    Effective Date: June 19, 2025

    Welcome to DNS Changer. This Privacy Policy explains how we collect, use, and protect your information when you use our DNS changer mobile application.

    1. Information We Collect
    We do not collect any personally identifiable information (PII). Specifically:

    We do not collect names, emails, phone numbers, or any user-identifiable data.

    We do not log DNS queries or internet activity.

    We do not use cookies or trackers.

    2. Permissions and Functionality
    The App uses Apple’s NetworkExtension API to enable custom DNS profiles. This allows you to select a third-party DNS provider for improved privacy and ad blocking. All configuration changes are made locally on your device.

    3. Use of Third-Party DNS Providers
    You may choose to route your DNS queries through third-party providers like AdGuard DNS, Cloudflare DNS, or NextDNS. These services have their own privacy policies and practices. We do not control or take responsibility for how these services process your data.

    4. Data Sharing and Storage
    We do not store, share, or sell any user data.

    All preferences and settings are stored locally on your device only.

    5. Security
    We follow best practices to ensure your configuration data remains secure and private. Since no personal data is collected or transmitted, your privacy is inherently protected.

    6. Children’s Privacy
    DNS Changer is not intended for use by children under the age of 13. We do not knowingly collect information from children.

    7. Changes to this Policy
    We may update this policy as needed. If changes are made, we will update this notice within the app.
    ]]></string>

</resources>